# Mystic-Type

./: .gitignore  CMakeLists.txt  DOXYGEN.md  Doxyfile  Makefile  Protocole.md  README.md  build.bat  build.sh  client  client.cpp  compile.sh  game.cpp  plazza  rtype  server  server.cpp
.github/workflows/: auto_build.yml
docs/: README.md  _a_socket_8cpp.html  _a_socket_8hpp.html  _a_socket_8hpp.js  _a_socket_8hpp_source.html  _components_8hpp.html  _components_8hpp_source.html  _core_8hpp.js  _core_8hpp_source.html  _game_state_8hpp.html  _game_state_8hpp.js  _game_state_8hpp_source.html  _game_world_8cpp.html  _game_world_8hpp.html  _game_world_8hpp.js  _game_world_8hpp_source.html  _graphic_8cpp.html  _graphic_8hpp.js  _graphic_8hpp_source.html  _graphic_client_8cpp.html  _graphic_client_8hpp.html  _graphic_client_8hpp_source.html  _i_socket_8hpp.html  _i_socket_8hpp.js  _i_socket_8hpp_source.html  _network_client_8cpp.html  _network_client_8hpp.html  _network_client_8hpp.js  _network_client_8hpp_source.html  _packet_8hpp.html  _packet_8hpp.js  _packet_8hpp_source.html  _protocol_8cpp.html  _protocol_8hpp.js  _protocol_8hpp_source.html  _r_e_a_d_m_e_8md.html  _raylib_8hpp.js  _raylib_8hpp_source.html  _session_manager_8hpp.html  _session_manager_8hpp.js  (+181 more)
docs/doxygen/html/: ASocket_8cpp.html  ASocket_8cpp__incl.map  ASocket_8cpp__incl.md5  ASocket_8cpp_source.html  ASocket_8hpp.html  ASocket_8hpp.js  ASocket_8hpp__dep__incl.map  ASocket_8hpp__dep__incl.md5  ASocket_8hpp__incl.map  ASocket_8hpp__incl.md5  ASocket_8hpp_source.html  ChildProcessManager_8cpp.html  ChildProcessManager_8cpp__incl.map  ChildProcessManager_8cpp__incl.md5  ChildProcessManager_8cpp_source.html  ChildProcessManager_8hpp.html  ChildProcessManager_8hpp.js  ChildProcessManager_8hpp__dep__incl.map  ChildProcessManager_8hpp__dep__incl.md5  ChildProcessManager_8hpp__incl.map  ChildProcessManager_8hpp__incl.md5  ChildProcessManager_8hpp_source.html  Components_8hpp.html  Components_8hpp.js  Components_8hpp__dep__incl.map  Components_8hpp__dep__incl.md5  Components_8hpp__incl.map  Components_8hpp__incl.md5  Components_8hpp_source.html  Core_8hpp.html  Core_8hpp.js  Core_8hpp__dep__incl.map  Core_8hpp__dep__incl.md5  Core_8hpp__incl.map  Core_8hpp__incl.md5  Core_8hpp_source.html  GameState_8hpp.html  GameState_8hpp.js  GameState_8hpp__dep__incl.map  GameState_8hpp__dep__incl.md5  (+1406 more)
docs/doxygen/xml/: ASocket_8cpp.xml  ASocket_8hpp.xml  ChildProcessManager_8cpp.xml  ChildProcessManager_8hpp.xml  Components_8hpp.xml  Core_8hpp.xml  Doxyfile.xml  GameState_8hpp.xml  GameWorld_8cpp.xml  GameWorld_8hpp.xml  GraphicClient_8cpp.xml  GraphicClient_8hpp.xml  Graphic_8cpp.xml  Graphic_8hpp.xml  ISocket_8hpp.xml  IpcChannel_8cpp.xml  IpcChannel_8hpp.xml  (+105 more)
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  dir_0c0333544ec44c57ec7d33d873fe36a2.html  dir_0c0333544ec44c57ec7d33d873fe36a2.js  dir_0c0333544ec44c57ec7d33d873fe36a2_dep.map  dir_0c0333544ec44c57ec7d33d873fe36a2_dep.md5  dir_15c48e0527d4d7f22e420009ebd2c49d.html  dir_15c48e0527d4d7f22e420009ebd2c49d.js  dir_15c48e0527d4d7f22e420009ebd2c49d_dep.map  dir_15c48e0527d4d7f22e420009ebd2c49d_dep.md5  dir_1621dabe47995ff6401734bbbe4720a9.html  dir_1621dabe47995ff6401734bbbe4720a9.js  dir_1621dabe47995ff6401734bbbe4720a9_dep.map  dir_1621dabe47995ff6401734bbbe4720a9_dep.md5  dir_4ae7b5270e6abe70cc80248b1e2ecaff.html  dir_4ae7b5270e6abe70cc80248b1e2ecaff.js  dir_4ae7b5270e6abe70cc80248b1e2ecaff_dep.map  dir_4ae7b5270e6abe70cc80248b1e2ecaff_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6f4249a29cb7a7f58b157815d2f1c8e8.html  dir_6f4249a29cb7a7f58b157815d2f1c8e8.js  dir_6f4249a29cb7a7f58b157815d2f1c8e8_dep.map  dir_6f4249a29cb7a7f58b157815d2f1c8e8_dep.md5  dir_9a84f5b8b1304a5e6156802529738d00.html  dir_9a84f5b8b1304a5e6156802529738d00.js  dir_9a84f5b8b1304a5e6156802529738d00_dep.map  dir_9a84f5b8b1304a5e6156802529738d00_dep.md5  dir_a2c98005762925003481a1ea339550b7.html  dir_a2c98005762925003481a1ea339550b7.js  dir_a2c98005762925003481a1ea339550b7_dep.map  dir_a2c98005762925003481a1ea339550b7_dep.md5  dir_ae704943845cddf5dc0bf544ad7849ee.html  dir_ae704943845cddf5dc0bf544ad7849ee.js  dir_ae704943845cddf5dc0bf544ad7849ee_dep.map  dir_ae704943845cddf5dc0bf544ad7849ee_dep.md5  dir_ddbd5722dacc76681cca8984ad0dfb04.html  (+86 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_19.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_6.js  classes_7.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_e.js  defines_1.js  enums_0.js  enums_1.js  enums_3.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+54 more)
scripts/: stress_bot.py  stress_run.sh
src/: main.cpp  mainClient.cpp
src/Client/: GameState.hpp  NetworkClient.cpp  NetworkClient.hpp
src/Graphic/: Graphic.hpp
src/GraphicClient/: GraphicClient.cpp  GraphicClient.hpp
src/Network/: SessionManager.cpp  SessionManager.hpp
src/Raylib/: Raylib.cpp  Raylib.hpp
src/ecs/: Components.hpp  Core.hpp  System.hpp
src/graphical-client/: CMakeLists.txt  DOXYGEN_MAIN.hpp  build-client.sh  client.cpp  main.cpp
src/graphical-client/Graphic/: Graphic.cpp  Graphic.hpp
src/graphical-client/GraphicClient/: GraphicClient.cpp  GraphicClient.hpp  MenuScreens.cpp  MenuScreens.hpp  MenuState.hpp
src/graphical-client/Raylib/: Raylib.cpp  Raylib.hpp
src/graphical-client/Scenes/: GameScene.cpp  GameScene.hpp  HOW_TO_ADD_SCENES.md  IScene.hpp  LobbyScene.cpp  LobbyScene.hpp  MenuScene.cpp  MenuScene.hpp  SceneManager.cpp  SceneManager.hpp
src/graphical-client/ecs/: Components.hpp  Core.hpp  System.hpp
src/server/: CMakeLists.txt  ChildProcessManager.cpp  ChildProcessManager.hpp  IpcChannel.cpp  IpcChannel.hpp  game.cpp  main.cpp  mingw-64-toolchain.cmake  server.cpp  udp_main.cpp
(+378 files in other folders)
